2009-09-21  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.c: added new directive to disable hidden file/directory
	protection in the backend (MonoCheckHiddenFiles).

2009-08-24  Marek Habersack  <mhabersack@novell.com>

	* Makefile.am (mod_mono_la_CFLAGS): glib is no longer used

	* glib_compat.c, glib_compat.h: added. Compatibility glib
	functions/macros used in mono-io-portability.c

2009-03-16  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.c (ensure_dashboard_initialized): do the XXGLOBAL
	detection based on the passed alias. Better fix for #476289

2009-03-14  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.c (ensure_dashboard_initialized): takes an argument
	which tells it whether it's called as part of the XXGLOBAL (auto
	app) server and, if yes, turns off the dashboard attachment
	critical error which in this case is a false alarm. Fixes bug
	#476289

2009-03-08  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.c (send_entire_file): attempts to map file name using
	mono_portability_find_file which is able to find files with the
	same name but different case if MONO_IOMAP is in effect.
	Added a new directive, MonoIOMAP which takes two parameters - the
	alias and MONO_IOMAP-style value (all/case/drive). This directive
	switches MONO_IOMAP on for that alias within mod_mono as well as
	exports the MONO_IOMAP environment variable in the backend's
	environment.

	* mono-io-portability.c, mono-io-portability.h: added. Copied from
	mono runtime and modified for mod_mono purposes.

2009-02-20  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.h: removed Apache 1.3 support.
	Defined several macros used in mod_mono.c

	* mod_mono.c: removed Apache 1.3 support.
	Replaced atoi calls with own function to convert strings to
	integers with a fall back to a provided default (string_to_long).
	Adjusted levels of several DEBUG_PRINT messages.
	Improved dashboard initialization code.
	Some refactoring to make code more granular.